# RTGameAPI

./: CMakeLists.txt
Headers/Graphics/: Draw.h  GLFW_standart_functions.h  Transform.h  Vectors.h
Source/Graphics/: CMakeLists.txt  Draw.c  GLFW_standart_functions.c  Transform.c
Tests/: BECAP  a.out  test.c
